# ollama-cli

./: .gitignore  main.py  pyproject.toml
.github/workflows/: lint.yml
.ocli/: settings.json
src/core/: config.py  prompt.py
src/core/agent/: planning_agent.py  reader_agent.py  writer_agent.py
src/ollama_cli/: main.py
src/ollama_cli/core/: config.py  prompt.py
src/ollama_cli/core/agent/: writer_agent.py
src/ollama_cli/provider/: anthropic.py  ollama.py  openai.py
src/ollama_cli/settings/: ai_setup.py  config.py  settings.py
src/ollama_cli/ui/: app.py  bot.py  callbacks.py  chat_message.py  markdown_parser.py  styles.css
src/ollie/: main.py
src/ollie/core/: config.py
src/ollie/core/agent/: planning_agent.py  writer_agent.py
src/ollie/provider/: anthropic.py  ollama.py  openai.py
src/ollie/settings/: ai_setup.py
src/ollie/ui/: app.py  bot.py  callbacks.py
src/provider/: anthropic.py  ollama.py  openai.py  provider.py
